--- a/samples/sensor/sht3xd/sample.yaml
+++ b/samples/sensor/sht3xd/sample.yaml
@@ -8,7 +8,7 @@ sample:
   name: SHT3XD Sensor Sample
 common:
   platform_allow: efr32mg_sltb004a frdm_k64f nrf51_ble400
-    nrf52840dk_nrf52840 nucleo_l476rg
+    nrf52840dk_nrf52840 nucleo_l476rg tlsr9518adk80d
   integration_platforms:
     - nrf52840dk_nrf52840
   tags: sensors
